# rthon

./: C_IMPLEMENTATION_PLAN.md  C_IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  build_extension.py  debug_jupyter_environment.py  jupyter_fix_cell.py  jupyter_test.py  pyproject.toml  quick_test.py  setup.py  setup_c_extension.py  structure.txt  test_c_extension.py  test_c_lm.ipynb  test_integration.py  test_miniforge.py  testing.ipynb  update_notebook_for_integrated_rthon.py
src/c_linalg/: Makefile  linear_regression.c  linear_regression.h  matrix.c  python_lm.c  python_lm.h  qr_decomposition.c  qr_decomposition.h  simple_lm.c  simple_test  test_regression  test_regression.c
src/c_linalg/simple_test.dSYM/Contents/Resources/DWARF/: simple_test
src/c_linalg/test_regression.dSYM/Contents/: Info.plist
src/c_linalg/test_regression.dSYM/Contents/Resources/DWARF/: test_regression
src/c_linalg/test_regression.dSYM/Contents/Resources/Relocations/aarch64/: test_regression.yml
src/rprob/: __init__.py  binomial.py  exponential.py  gamma.py  normal.py  uniform.py
src/rthon/: __init__.py  __main__.py  poisson.py
src/rthon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rthon/distributions/: __init__.py
src/rthon/regression/: __init__.py  c_lm.py  formula.py  linear_model.py  lm.py  statistics.py
src/rthon/regression/_c_ext/: matrix.h  python_lm.c  python_lm.h
src/rthon/regression/_deprecated/: README.md  __init__.py  linear_algebra.py  lm.py
test_data/: model_summary.csv  tidy_coefficients.csv
tests/: demo_lm.py  prostate_data_loader.py  simple_test_c.py  test_deprecation.py  test_distributions.py  test_lm.py  test_lm_c_extension.py  test_normal.py
