[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "rthon"
version = "0.4.1"
description = "R-style probability functions for Python with high-performance C linear regression"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.19.0"
]
authors = [{name = "Sam Switz", email = "samuel76@illinois.edu"}]
keywords = ["statistics", "probability", "R", "distributions", "normal", "uniform", "binomial", "poisson", "exponential", "gamma"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis", "ruff", "black", "build", "twine"]

[project.urls]
Homepage = "https://github.com/sdswitz/rthon"

# If you want a CLI, expose an entry point:
[project.scripts]
rprob = "rthon.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
